--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,35 +1,63 @@
-
+*{
+    /* background-color: rgb(234, 234, 234); */
+}
 .login-btn-area{
     right: 50px;
 }
 
-#nav-bar{
+#nav{
+    top:0;
+    overflow: hidden;
     width: 100%;
     position:fixed;
+    height: 10%;
+    background-color: rgb(182, 188, 179);
+}
+.nav-bar-btn{
+    display: inline;
 }
 
+#menu-btn{
+    position: absolute;
+    top: 15px;
+    left: 15px;
+}
+
+#acc-area{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+#banner{
+    position: absolute;
+    top: 15px;
+    left: 190px;
+}
 /* ------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------ */
 
 #left-menu-area{
-    
     position: fixed;
-    top: 100px;
+    top: 68px;
     width: 14%;
     height: 100%;
     display: none;
     float: left;
+    background-color: rgb(234, 234, 234);
 }
 .left-menu-btn{
-    text-align: center; 
+    text-align: left; 
     width: 190px;
     height: 25px;
-    border: 1px solid black;
+    margin: 10px;
 }   
 .left-menu-btn a{
-    text-decoration: none
+    text-decoration: none;
+    font-size: 19px;
+    color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 /* ------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------ */
@@ -49,8 +77,8 @@
     height: 100%;
     left: 14%;
     position: absolute;
-    top: 100px;
-    
+    top: 68px;
+    background-color: rgb(244, 244, 244);
 }
 
 /* ------------------------------------------------------------------------ */
@@ -83,10 +111,7 @@
     display: none;
 } */
 
-.link-button{
-    text-decoration: none;
-    color: green;
-}
+
 
 #search-box{
     float: right;
